@@ -1,3 +1,4 @@
+Improved loading multiple groups
 Instead of "student null", use the first part of the log file name
 Removed "utah" in "utah session started at..."
 Removed the legend with the sim names
